Bug 747379 - Override Histogram::AddSampleSet for FlagHistograms. r=nfroyd